ai/base/searxng/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: ai
  labels:
    app: searxng
    app.kubernetes.io/component: websearch
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: ai
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: searxng
      app.kubernetes.io/component: websearch
      app.kubernetes.io/name: searxng
      app.kubernetes.io/part-of: ai
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: searxng
        app.kubernetes.io/component: websearch
        app.kubernetes.io/name: searxng
        app.kubernetes.io/part-of: ai
    spec:
      containers:
      - name: searxng
        image: searxng/searxng:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
        volumeMounts:
          - name: searxng-config-pvc
            mountPath: /etc/searxng
          - name: searxng-cache
            mountPath: /var/cache/searxng
        securityContext: {}
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        node-role.kubernetes.io/ai: "true"
      volumes:
        - name: searxng-cache
          emptyDir: {}
        #- name: settings
        #  configMap:
        #    name: searxng-settings
        - name: searxng-config-pvc
          persistentVolumeClaim:
            claimName: searxng-config
        - name: localtime
          hostPath:
            path: /etc/localtime
