ai/base/searxng/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
    app.kubernetes.io/component: searxng
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: ai
  name: searxng
  namespace: ai
spec:
  selector:
    app: searxng
    app.kubernetes.io/component: searxng
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: ai
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  type: ClusterIP
